latte/tests/bad/type/class/duplicate_fields.lat
class A {
  int f;
  void f() {}
}

int main() {
  return 0;
}
